# avro

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
src/: json_keys_size.py  models.py  schemes_for_serialize.py
src/backups/: avro.py  avro_schemaless.py  base.py  json_and_zip.py  json_keys_size.py  primitiv_json.py  primitiv_pickle.py  protobuff.py  pydantic_models.py  simple_json.py  simple_pickle.py
src/backups/proto_files/: backup_item.proto  backup_item_pb2.py
