[tool.poetry]
name = "avro_demo"
version = "0.1.0"
description = ""
authors = ["Vlada Sabelnikova <vladasabelnikova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.1"
fastavro = "^1.9.7"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
protobuf = "3.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
